[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/kontroler/tembak_mobile.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="CubeMesh" id=3]

[node name="tembak_mobile" type="TouchScreenButton"]
shape = SubResource( 1 )
script = ExtResource( 1 )

[node name="MeshInstance2D6" type="MeshInstance2D" parent="."]
modulate = Color( 0.392157, 0.392157, 0.392157, 0.392157 )
position = Vector2( 10, 10 )
rotation = 1.5708
scale = Vector2( 10, 10 )
mesh = SubResource( 2 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2( 3, 10 )
scale = Vector2( 3, 1 )
mesh = SubResource( 3 )

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]
position = Vector2( 17, 10 )
scale = Vector2( 3, 1 )
mesh = SubResource( 3 )

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
position = Vector2( 10, 3 )
rotation = 1.5708
scale = Vector2( 3, 1 )
mesh = SubResource( 3 )

[node name="MeshInstance2D4" type="MeshInstance2D" parent="."]
position = Vector2( 10, 17 )
rotation = 1.5708
scale = Vector2( 3, 1 )
mesh = SubResource( 3 )

[node name="MeshInstance2D5" type="MeshInstance2D" parent="."]
position = Vector2( 10, 10 )
rotation = 1.5708
mesh = SubResource( 2 )
